[package]
name = "wyrcan"
version = "1.0.0"
edition = "2021"
include = ["README.md", "rust-toolchain.toml", "/src"]
description = "The Container Bootloader"
homepage = "https://gitlab.com/wyrcan/wyrcan"
repository = "https://gitlab.com/wyrcan/wyrcan"
readme = "README.md"
keywords = ["container", "docker", "podman", "oci", "bootloader"]
categories = ["filesystem", "hardware-support", "network-programming", "embedded"]

license-file = "LICENSE"

[dependencies]
serde = { version = "^1.0.130", features = ["derive"], default-features = false }
structopt = { version = "^0.3.25", default-features = false }
ureq = { version = "^2.3.1", features = ["json"] }
serde_json = "^1.0.72"
indicatif = "^0.16.2"
iocuddle = "^0.1.1"
tempfile = "^3.2.0"
anyhow = "^1.0.45"
flate2 = "^1.0.22"
ring = "^0.16.20"
libc = "^0.2.107"
regex = "^1.5.4"
cpio = "^0.2.0"
tar = "^0.4.37"
log = "^0.4.14"

[profile.dev]
opt-level = 3 # Unoptimized flate2 is unusably slow

[profile.release]
codegen-units = 1
incremental = false
opt-level = 3
lto = true
